2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add more SPI methods to WKWebView
        https://bugs.webkit.org/show_bug.cgi?id=129011

        Reviewed by Tim Horton.

        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _webProcessIdentifier]):
        (-[WKWebView _sessionState]):
        (releaseNSData):
        (-[WKWebView _restoreFromSessionState:]):
        * UIProcess/API/Cocoa/WKWebViewPrivate.h:

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add more new SPI methods
        https://bugs.webkit.org/show_bug.cgi?id=129009

        Reviewed by Tim Horton.

        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _certificateChain]):
        (-[WKWebView _committedURL]):
        (-[WKWebView _applicationNameForUserAgent]):
        (-[WKWebView _setApplicationNameForUserAgent:]):
        * UIProcess/API/Cocoa/WKWebViewPrivate.h:

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Make reload SPI for now
        https://bugs.webkit.org/show_bug.cgi?id=129007

        Reviewed by Simon Fraser.

        * UIProcess/API/Cocoa/WKWebView.h:
        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _reload]):
        * UIProcess/API/Cocoa/WKWebViewPrivate.h:

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add -[WKWebView reload]
        https://bugs.webkit.org/show_bug.cgi?id=129005

        Reviewed by Tim Horton.

        * UIProcess/API/Cocoa/WKWebView.h:
        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView reload]):

2014-02-18  Anders Carlsson  <andersca@apple.com>

        Add SPI for allowing HTTPS certificates
        https://bugs.webkit.org/show_bug.cgi?id=129002

        Reviewed by Dan Bernstein.

        * UIProcess/API/Cocoa/WKProcessClass.mm:
        (-[WKProcessClass _setAllowsSpecificHTTPSCertificate:forHost:]):
        * UIProcess/API/Cocoa/WKProcessClassInternal.h: