@@ -1,5 +1,17 @@
 2014-02-18  Anders Carlsson  <andersca@apple.com>
 
+        Add SPI for enabling/disabling private browsing
+        https://bugs.webkit.org/show_bug.cgi?id=129012
+
+        Reviewed by Tim Horton.
+
+        * UIProcess/API/Cocoa/WKWebView.mm:
+        (-[WKWebView _privateBrowsingEnabled]):
+        (-[WKWebView _setPrivateBrowsingEnabled:]):
+        * UIProcess/API/Cocoa/WKWebViewPrivate.h:
+
+2014-02-18  Anders Carlsson  <andersca@apple.com>
+
         Add more SPI methods to WKWebView
         https://bugs.webkit.org/show_bug.cgi?id=129011
 
